--- a/index.html
+++ b/index.html
@@ -17,17 +17,34 @@ body {
 }
 
 h1 { letter-spacing: 6px }
-h2 { margin-bottom: 6px }
+h2 {
+  margin-bottom: 6px;
+  text-overflow: ellipsis;
+  max-width: calc(50vw - 300px);
+}
+
 h2:after {
   display: block;
   content: ' ';
-  background-image: linear-gradient(to left, currentColor, #0000);
   margin-top: 12px;
   height: 3px;
 }
 
+h2 b {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+#player-0 h2:after {
+  background-image: linear-gradient(to left, #0000, currentColor 18px, #0000);
+  margin-right: -10px;
+}
+
 #player-1 h2:after {
-  background-image: linear-gradient(to right, currentColor, #0000);
+  margin-left: -10px;
+  background-image: linear-gradient(to right, #0000, currentColor 18px, #0000);
 }
 
 canvas {
@@ -93,20 +110,18 @@ svg {
   height: 10px;
   background: #7cecff20;
   margin-top: 1px;
+}
+
+#bar {
+  overflow: hidden;
+  position: relative;
   box-shadow: 0 0 20px 1px #7cecff30;
   outline: 1px solid;
   outline-offset: -1px;
 }
 
-#bar { overflow: hidden; position: relative; }
-#loading {
-  background: #7cecff40;
-}
-
-#position {
-  background: #7cecff;
-}
-
+#loading { background: #7cecff40 }
+#position { background: #7cecff }
 #loading, #position {
   position: absolute;
   transform: translate(-600px);
@@ -119,6 +134,7 @@ svg {
 }
 
 @media (orientation: portrait) {
+  h2 { max-width: 300px }
   #controls { grid-row: 3 }
   #player-0 { grid-column: 2; grid-row: 4 }
   #player-1 { grid-column: 3; grid-row: 4 }
@@ -132,14 +148,14 @@ svg {
       <defs><filter id="g"><feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="cyan"/></filter></defs>
       <path style="filter:url(#g)" d="M36 62.6H5.2v-19H36v19zM38.4 39H3l-3 2.8v23l3 2.5h35.4l3.1-2.7V41.7L38.4 39z"/><g clip-path="url(#clipPath4354)" transform="matrix(1.25 0 0 -1.25 -135 647)"><path style="filter:url(#g)" d="M333.3 426.4a18.9 18.9 0 00-19.1 18.5c0 10.3 8.6 18.6 19.1 18.6a18.9 18.9 0 0019.2-19.2c-.4-10-8.8-18-19.2-18m0 41.2c-12.8 0-23.2-10.1-23.2-22.6a22.9 22.9 0 0123.2-22.5c12.9 0 23.2 10 23.2 22.5a22.9 22.9 0 01-23.2 22.6"/><path style="filter:url(#g)" d="M333.3 406.6c-21.8 0-39.4 17.2-39.4 38.3s17.6 38.3 39.4 38.3c21.8 0 39.5-17.1 39.5-38.3s-17.7-38.3-39.5-38.3m0 80.6a42.9 42.9 0 01-43.4-42.9c.3-23 19.6-41.6 43.4-41.6a42.9 42.9 0 0143.5 42.2 42.9 42.9 0 01-43.5 42.3M463.7 407H457l-28.4 31.8v9.5H448v34.5h15.6V407zm1.5 79.5H447l-2.7-3.2v-31.5h-17.1c-2.2 0-2.2-1.2-2.2-2.1v-12.2l30.4-34.4h9.8l2.6 2.4v78.1l-2.6 3zM419.2 441.1h-19.6v-33.9h-15.7v75.6h6.9l28.4-32.1V441zm-26.9 45.3h-9.8l-2.6-2.5v-78.1l2.6-2.7h18.2l2.7 3v31.6h17.1c2.2 0 2.2 1.1 2.2 2V452l-30.4 34.5zM283.2 407h-18.8l-31.8 32.5v13.1h52a22.5 22.5 0 00-22-15.5h-9.2l29.8-30m-20 26.2c13.8.3 24.6 9.7 26.2 23h-58l-2.7-2.6V439c0-.5 0-1 .4-1.5l33.4-34.3h26.3v4.1l-26.2 26h.6zM220.2 407h-15.7v45.6h15.7V407zm1.3 49.4h-18.7l-2.5-2.7v-48l2.7-2.6h18.6l2.6 3v47.6l-2.7 2.7z"/><path style="filter:url(#g)" d="M172.5 467.4c-3.7 0-6.8-3.1-6.8-6.8v-53.5l-15.6-.1v54.8a20.7 20.7 0 0021.2 20.8h91.2a23 23 0 0022-15.2h-112zm90 19.1h-91.1a24.6 24.6 0 01-25.6-25v-55.9l3-2.4h18.5l2.4 2.9v54.4a3 3 0 003.2 3h116.4a27 27 0 01-26.7 23"/></g></svg></div>
   <div id="player-0">
-    <h2>AI-0</h2>
+    <h2><b>AI-0</b></h2>
     <b>LOADING</b>
     <br>
     <b>0</b>
   </div>
   <canvas width="1200" height="1200"></canvas>
   <div id="player-1">
-    <h2>AI-1</h2>
+    <h2><b>AI-1</b></h2>
     <b>LOADING</b>
     <br>
     <b>0</b>
@@ -175,7 +191,7 @@ const buildInfo = (player, i) => {
   const elem = document.getElementById(`player-${i}`)
   if (!elem) return { score: () => {}, status: () => {} }
   const [name, status, score] = [...elem.children].map(e => e.firstChild).filter(Boolean)
-  name.data = player.name
+  name.firstChild.data = player.name
   elem.style.color = `hsl(${player.hue*360}, 100%, 70%)`
   elem.style.textShadow = `0 0 6px hsla(${player.hue*360}, 100%, 70%, 0.4)`
   elem.style.width = 'calc(100% - 36px)' // force width force redraw
